--- a/root_vars/ec2_image_vars.yml
+++ b/root_vars/ec2_image_vars.yml
@@ -4,11 +4,14 @@
 # For io1 you can set the iops with iops: 1000
 # https://aws.amazon.com/ebs/features/
 region: ap-south-1 # Change the Region
+keypair: your-pem-file-name #Without extension
 
 hostpath: "hosts"
 demo_env: 1
 splunk_init: 1
 phantom_init: 1
+splunk_setup: 1
+phantom_setup: 1
 
 splunk_aws:
   instance_type: t2.small
@@ -29,9 +32,10 @@ phantom_aws:
   security_group_name: phantom-servers # Change the security group name here
   security_group_desc: "Security Group for phantom Servers"
   image_ami_id: "ami-09a93840158ec5b96" # This is the Phantom AMI 
-  hoststring: "ansible_user=user" #For phantom
+  hoststring: "ansible_user=centos ansible_ssh_private_key_file=keys/{{ keypair }}.pem"
   hosts_group: "phantom_servers"
   instance_name_tag: "RDAPPhantomServer"
   disk_size: "200"
   disk_type: "gp2"  
   count_instances: 1    
+  default_admin_pass: password
