--- a/root_vars/ec2_image_vars.yml
+++ b/root_vars/ec2_image_vars.yml
@@ -3,15 +3,17 @@
 # EC2 volume types gp2, io1, st1, sc1, standard
 # For io1 you can set the iops with iops: 1000
 # https://aws.amazon.com/ebs/features/
-region: ap-south-1 # Change the Region
-keypair: your-pem-file-name #Without extension
+region: ap-south-1 # AWS Region
+keypair: your_key_name #your aws key pair name
 
 hostpath: "hosts"
-demo_env: 1
-splunk_init: 1
-phantom_init: 1
-splunk_setup: 1
-phantom_setup: 1
+demo_env: 1 # Set this to 1 if you want full demo environment setup (Work in Progress)
+splunk_init: 1 # If this is set to 1 it will create Centos AWS image (to be used for splunk)
+phantom_init: 1 # If this is set to 1 it will create the Phantom image from AWS marketplace
+splunk_setup: 1 #Deploy standalone splunk instance
+phantom_setup: 1 #Set to 1 if you want the phantom instance to be added to splunk server
+phantom_auth_token: "This will be changed automatically" #AUTO CHANGED
+phantom_default_admin_pass: "This will be changed automatically"
 
 splunk_aws:
   instance_type: t2.small
@@ -38,4 +40,3 @@ phantom_aws:
   disk_size: "200"
   disk_type: "gp2"  
   count_instances: 1    
-  default_admin_pass: password
