--- a/site.yml
+++ b/site.yml
@@ -29,10 +29,23 @@
         name: "ec2_create"
       tags: info
 
+    # - name: Wait 300 seconds for port 22 to become open and contain "OpenSSH"
+    #   wait_for:
+    #     port: 22
+    #     host: '{{ (ansible_ssh_host|default(ansible_host))|default(inventory_hostname) }}'
+    #     search_regex: OpenSSH
+    #     delay: 10
+    #   vars:
+    #     ansible_connection: local
+    - meta: refresh_inventory
+
+#Base setup of centos OS stuff
 - import_playbook: base_setup.yml
 
-- import_playbook: base_setup.yml
-  when: splunk_init|bool
+#Splunk install 
+- import_playbook: deploy_splunk.yml
+  when: splunk_setup|bool
+
 
 
 
