--- a/roles/ec2_create/tasks/main.yml
+++ b/roles/ec2_create/tasks/main.yml
@@ -11,4 +11,6 @@
   when: phantom_init|bool
 
 - include_tasks: ec2_instance_info.yml
-  tags: info  
+  tags:
+    - info
+    - phantom-app-config 
