--- a/roles/ec2_create/tasks/ec2_splunk.yml
+++ b/roles/ec2_create/tasks/ec2_splunk.yml
@@ -105,12 +105,20 @@
   with_items: "{{ ec2_iops.tagged_instances }}"
   when: ec2_iops.changed
 
-# - name: Wait for SSH to come up
-#   local_action: wait_for 
-#                 host={{ item.public_ip }} 
-#                 port=22 
-#                 state=started
-#   with_items: "{{ ec2.tagged_instances }}"
+- name: Wait for SSH to come up
+  local_action: wait_for 
+                host={{ item.public_ip }} 
+                port=22 
+                state=started
+  with_items: "{{ ec2.tagged_instances }}"
+  when: ec2.changed
 
+- name: Wait for SSH to come up
+  local_action: wait_for 
+                host={{ item.public_ip }} 
+                port=22 
+                state=started
+  with_items: "{{ ec2_iops.tagged_instances }}"
+  when: ec2_iops.changed
 
 
