--- a/roles/ec2_create/tasks/ec2_instance_info.yml
+++ b/roles/ec2_create/tasks/ec2_instance_info.yml
@@ -7,7 +7,8 @@
       "tag:Name": '{{ splunk_aws.instance_name_tag }}'
       instance-state-name: running
   register: ec2_info_splunk
-  tags: info  
+  tags: 
+    - info  
 
 - name: Gather facts about "{{ phantom_aws.instance_name_tag }}" launched instances
   ec2_instance_facts:    
@@ -23,8 +24,10 @@
     regexp: '^phantom_default_admin_pass:'
     line: 'phantom_default_admin_pass: {{ ec2_info_phantom.instances[0].instance_id }} #AUTO CHANGED'
   delegate_to: localhost
+  when: phantom_init|bool
   tags:
     - info
+
 
 - name: Show configured instances "{{ splunk_aws.instance_name_tag }}"
   debug: 
@@ -32,15 +35,18 @@
       "Splunk instance: ssh -i keys/{{ keypair }}.pem centos@{{ item.public_ip_address }}"
       
   with_items: "{{ ec2_info_splunk.instances }}"
-  tags: info
+  when: splunk_init|bool
+  tags: 
+    - info
 
 - name: Show configured instances "{{ phantom_aws.instance_name_tag }}"
   debug: 
     msg: 
       "Phantom instance: https://{{ item.public_ip_address }} 
       User: admin 
-      Password: password"
-      
+      Password: {{ ec2_info_phantom.instances[0].instance_id }}"
+  when: phantom_init|bool      
   with_items: "{{ ec2_info_phantom.instances }}"
-  tags: info
+  tags: 
+    - info
 
