--- a/roles/ec2_create/tasks/ec2_splunk.yml
+++ b/roles/ec2_create/tasks/ec2_splunk.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: Create security group
+- name: Create security group for Splunk
   ec2_group:
     name: "{{ splunk_aws.security_group_name }}"
     description: "{{ splunk_aws.security_group_desc }}"
@@ -29,7 +29,7 @@
     state: present
   register: security_group
 
-- name: Create EC2 instance (Default)
+- name: Create Splunk EC2 instance (Default)
   ec2:
     instance_tags:
         Name: "{{ splunk_aws.instance_name_tag }}"
@@ -51,7 +51,7 @@
   when: splunk_aws.disk_type != "io1"
 
   
-- name: Create EC2 instance "{{ splunk_aws.iops }}" IOPS
+- name: Create Splunk EC2 instance "{{ splunk_aws.iops }}" IOPS
   ec2:
     instance_tags:
         Name: "{{ splunk_aws.instance_name_tag }}"
@@ -86,8 +86,45 @@
 #       "tag:Name": SplunkServerBOTO
 
 #   register: ec2_info
+# - name: Wait for port 22 to be ready
+#   hosts: [splunk_servers]
+#   gather_facts: False
+#   tasks:
+#     - local_action: wait_for port=22 host="{{ item.public_ip }}"  search_regex=OpenSSH delay=10
 
-- name: Add the newly created EC2 instance(s) to hosts group
+# - name: Wait for SSH to come up
+#   delegate_to: "{{ item.public_ip }}"
+#   wait_for_connection:
+#     delay: 60
+#     timeout: 320
+#   with_items: "{{ ec2.tagged_instances }}"
+#   when: ec2.changed
+
+# - name: Wait for SSH to come up
+#   delegate_to: "{{ item.public_ip }}"
+#   wait_for_connection:
+#     delay: 60
+#     timeout: 320
+#   with_items: "{{ ec2_iops.tagged_instances }}"
+#   when: ec2_iops.changed
+
+# - name: Wait for SSH to come up
+#   local_action: wait_for 
+#                 host={{ item.public_ip }} 
+#                 port=22 
+#                 state=started
+#   with_items: "{{ ec2.tagged_instances }}"
+#   when: ec2.changed
+
+# - name: Wait for SSH to come up
+#   local_action: wait_for 
+#                 host={{ item.public_ip }} 
+#                 port=22 
+#                 state=started
+#   with_items: "{{ ec2_iops.tagged_instances }}"
+#   when: ec2_iops.changed
+
+- name: Add the newly created Splunk EC2 instance(s) to hosts group
   ini_file:
     path: "{{ hostpath }}"
     section: "{{ splunk_aws.hosts_group }}"
@@ -96,7 +133,7 @@
   with_items: "{{ ec2.tagged_instances }}"
   when: ec2.changed
 
-- name: Add the newly created EC2 Optimized instance(s) to hosts group
+- name: Add the newly created Splunk EC2 Optimized instance(s) to hosts group
   ini_file:
     path: "{{ hostpath }}"
     section: "{{ splunk_aws.hosts_group }}"
@@ -104,21 +141,3 @@
     allow_no_value: true
   with_items: "{{ ec2_iops.tagged_instances }}"
   when: ec2_iops.changed
-
-- name: Wait for SSH to come up
-  local_action: wait_for 
-                host={{ item.public_ip }} 
-                port=22 
-                state=started
-  with_items: "{{ ec2.tagged_instances }}"
-  when: ec2.changed
-
-- name: Wait for SSH to come up
-  local_action: wait_for 
-                host={{ item.public_ip }} 
-                port=22 
-                state=started
-  with_items: "{{ ec2_iops.tagged_instances }}"
-  when: ec2_iops.changed
-
-
