--- a/root_vars/ec2_image_vars.yml
+++ b/root_vars/ec2_image_vars.yml
@@ -4,19 +4,21 @@
 # For io1 you can set the iops with iops: 1000
 # https://aws.amazon.com/ebs/features/
 region: ap-south-1 # AWS Region
-keypair: splunk-dlam-mumbai #your aws key pair name
+keypair: keypair_name #your aws key pair name
 
 hostpath: "hosts"
 demo_env: 1 # Set this to 1 if you want full demo environment setup (Work in Progress)
 splunk_init: 1 # If this is set to 1 it will create Centos AWS image (to be used for splunk)
 phantom_init: 1 # If this is set to 1 it will create the Phantom image from AWS marketplace
-splunk_setup: 0 #Deploy standalone splunk instance
-phantom_setup: 0 #Set to 1 if you want the phantom instance to be added to splunk server
-phantom_auth_token: "This will be changed automatically" #AUTO CHANGED
-phantom_default_admin_pass: i-00d2ee31335eb1475 #AUTO CHANGED
+splunk_setup: 1 #Deploy standalone splunk instance
+phantom_setup: 1 #Set to 1 if you want the phantom instance to be added to splunk server
+phantom_auth_token: "This will be changed automatically"
+phantom_default_admin_pass: "This will be changed automatically"
+phantom_initial_admin_pass: password 
+
 
 splunk_aws:
-  instance_type: t2.small
+  instance_type: t2.large
   security_group_name: splunk-servers # Change the security group name here
   security_group_desc: "Security Group for splunk Servers"
   image_ami_id: "ami-1780a878" # This is the linux Centos AMI 
@@ -24,7 +26,7 @@ splunk_aws:
   hosts_group: "splunk_servers"
   instance_name_tag: "RDAPSplunkServer"
   disk_size: "20"
-  disk_type: "gp2"
+  disk_type: "io1"
   iops: 1000
   count_instances: 1
 
