--- a/roles/splunk_common/tasks/stop_splunk.yml
+++ b/roles/splunk_common/tasks/stop_splunk.yml
@@ -1,16 +1,25 @@
 ---
 
-- name: Check PID
-  stat: 
-    path: "{{ splunk.pid }}"
-  register: spl_pid
+- name: Check if Splunk is running for stopping
+  shell: ps -ef |  grep splunkd | grep -v grep
+  register: process_list
+  ignore_errors: true
+  changed_when: false
 
-- name: Stop Splunk
+# There is a race condition here and also if other splunk services are running 
+# we cannot differentiate. This must be enhanced to use splunk status.
+
+- name: Stop Splunk v2
   command: "{{ splunk.exec }} stop"
-  when: spl_pid.stat.exists != False
+  register: splunk_status
+  when: process_list.rc == 0
 
 - name: Wait for Splunk process to exit
-  wait_for:
-    path: "{{ splunk.pid }}"
-    state: absent
-  when: ansible_system is match("Linux")
+  shell: ps -ef |  grep splunkd | grep -v grep
+  register: process_list
+  ignore_errors: true
+  changed_when: false
+  retries: 5
+  delay: 5
+  until: process_list.rc != 0
+  when: splunk_status.changed
