--- a/site.yml
+++ b/site.yml
@@ -43,12 +43,13 @@
 
 - import_playbook: base_setup.yml
 
-# Install SPlunk
+# Install Splunk
 - import_playbook: deploy_splunk.yml
   when: splunk_init|bool
-  
+
+# Install Splunk  
 - import_playbook: phantom_setup.yml
-  when: phantom_setup|bool
+  when: phantom_init|bool
   tags: phantom-demo
 
 
