--- a/root_vars/splunk_deployment_vars.yml
+++ b/root_vars/splunk_deployment_vars.yml
@@ -25,7 +25,9 @@ splunk:
   hec_token: 23415358-5782-9120-0233-144859576507
   hec_token_infrastructure: 13415358-5782-9120-0233-144859576507 
   svc_port: 8089 
-  install_apps: 1 # Install apps from list below. The file must exist under the files/ folder
+  install_apps: 0 # Install apps from list below. The file must exist under the files/ folder
+  install_apps_git: 1 # Install apps from list below but fetch them from Git
+  apps_git_location: "https://github.com/dlamspl/rdap/blob/master/roles/splunk_common/files"
   apps: ['splunk-app-for-infrastructure_122.tgz','splunk-add-on-for-infrastructure_122.tgz','phantom-app-for-splunk_2523.tgz','phantom-audit_02.tgz','phantom-remote-search_107.tgz','splunk-add-on-for-unix-and-linux_601.tgz']
   install_es: 0 # Install ES premium app
   es_app: "splunk-enterprise-security_521.spl"
